2006-xx-yy:  0.3.5       -- new option: "Save page as"

2006-11-29:  0.3.4       -- fixed drawing/scaling/rotation bugs in two-pages
                            mode when 1st page is smaller than 2nd page.
		         -- fixed problem with opening files with non-ascii characters
			    in file name via command line
			 -- *.bmp file pattern added to the list of supported
			    formats

2006-09-20:  0.3.3       -- fixed crash when rotating image in single-page
                            mode

2006-08-26:  0.3.2       -- Added Drag&Drop support for archives/dirs
                         -- Fixed icon arrangement bug in Thumbnails window
                         -- "Show Info" option is disabled if no textual
                             information for opened comicbook was found.
			 -- "General Info" tab was removed from Info Window.
			 -- Fixed crash on empty comicbook (another one...)

2006-08-21:  0.3.1       -- "Preload next image" option now works with Imlib2
                         -- Fixed bug with "Open previous" not working
                         -- Fixed redrawing bugs when dragging image with
			    mouse
                         -- internal improvements and cleanups
			 -- Fixed compilation problem with Imlib2-1.2.0

2006-08-15:  0.3.0       -- ImLib2 is now used and required - huge speed
                            improvement in image loading & rendering
			 -- caching is now specified in Mb and is handled by
			    Imlib
			 -- removed "Scaling method" option (no longer
			    applicable)
			 -- double click moves to next page
			 -- removed experimental "Create archive" option (was
			    enabled by accident in 0.2.8)

2006-06-26:  0.2.8       -- added support for free unrar
			 -- new hotkeys: Ctrl+Q, Ctrl+Home, Ctrl+End
			 -- updated autoconf bnv_have_qt macro

2006-03-02:  0.2.7       -- fixed bug with status bar hiding in fullscreen mode 
                            if 'Hide statusbar in fullscreen mode' option is on.
