@@ -1,4 +1,7 @@
-2006-xx-yy:  0.3.5       -- new option: "Save page as"
+2007-xx-yy:  0.4.0       -- ported to Qt4
+                         -- Imlib2 library is no longer used
+                         -- new option: "Save page as"
+			 -- new option: Auto-adjust cache size
 
 2006-11-29:  0.3.4       -- fixed drawing/scaling/rotation bugs in two-pages
                             mode when 1st page is smaller than 2nd page.
